# EVA

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/src/: imgui_color_gradient.cpp  imgui_color_gradient.h  imgui_curve_editor.cpp  imgui_curve_editor.hpp
dependencies/stb/: CMakeLists.txt
include/EVA/: EVA.hpp
scripts/: run-clang-format.ps1  run-clang-tidy.ps1
source/: Application.cpp  Application.hpp  EVA.hpp  Log.hpp  pch.hpp
source/EVA/: Application.cpp  Application.hpp  Assets.hpp  Core.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.hpp  Window.hpp
source/EVA/Assets/: Asset.cpp  Asset.hpp  AssetHandlers.hpp  AssetManager.cpp  AssetManager.hpp  DataObject.cpp  DataObject.hpp  FileDialog.cpp  FileDialog.hpp  FileSystem.hpp  Guid.hpp  ISerializeable.cpp  ISerializeable.hpp  Json.hpp  Mesh.cpp  Mesh.hpp  TextureManager.cpp  TextureManager.hpp  TextureUtilities.hpp  UUID.hpp
source/EVA/Assets/Procedural/: NodeEditor.hpp  TextueNode.hpp  TextureGeneratorLayer.hpp
source/EVA/Core/: Application.cpp  Application.hpp  Core.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.hpp  Platform.hpp  Timestep.hpp  Window.hpp
source/EVA/Editor/: EditorLayer.hpp  InspectorFields.cpp  InspectorFields.hpp  Viewport.hpp
source/EVA/Events/: Event.hpp  Key.hpp  Mouse.hpp  Window.hpp
source/EVA/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
source/EVA/Procedural/: NodeEditor.hpp  TextueNode.hpp  TextueNodes.hpp  TextureGeneratorLayer.hpp
source/EVA/Procedural/TextureNodes/: Base.hpp  CCL.hpp  Convert.hpp  Distance.hpp  FloodFill.hpp  Generators.hpp  KernelFilter.hpp  Modifiers.hpp  Noise.hpp
source/EVA/Renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  Common.hpp  Environment.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.hpp  Light.hpp  Material.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PerspectiveCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp
source/EVA/Utility/: ChaseCameraController.hpp  ClassMap.hpp  OrbitalCameraController.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PerspectiveCameraController.hpp  Profiler.hpp  SlidingWindow.hpp  Transform.cpp  Transform.hpp
source/Events/: Key.hpp  Mouse.hpp  Window.hpp
source/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp  Input.cpp  KeyCodes.hpp  Platform.cpp
source/Platform/OpenGL/: OpenGL.cpp  OpenGL.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLCaller.cpp  OpenGLCaller.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
source/Platform/Windows/: WindowsInput.cpp  WindowsPlatform.cpp  WindowsWindow.cpp  WindowsWindow.hpp
test/assets/graphs/: brick.graph  brick_ff.graph  ccl.graph  ccl2.graph  ff.graph  grass.graph  rocks.graph  rocks2.graph
test/assets/models/colonial_fighter_red_fox/: colonial_fighter_red_fox.mtl
test/assets/procedural/shaders/: blend.glsl  blend_grayscale.glsl  blend_rgba.glsl  brick.glsl  directional_warp.glsl  edge_detect.glsl  empty.glsl  flood_fill_map.glsl  gradient_noise.glsl  gradientmap.glsl  height_to_ao.glsl  height_to_curvature.glsl  height_to_normal.glsl  kernel_filter.glsl  levles_grayscale.glsl  levles_rgba.glsl  non_uniform_directional_warp.glsl  normal_blend.glsl  quad_transform.glsl  uniform_grayscale.glsl  voronoi.glsl  worley_noise2.glsl
test/assets/procedural/shaders/ccl/: apply_links.glsl  extents.glsl  extents_texture.glsl  find_links.glsl  label.glsl  to_gradient.glsl  to_index.glsl  to_map.glsl  to_position.glsl  to_random_color.glsl  to_random_grayscale.glsl
test/assets/procedural/shaders/convert/: edge_detect.glsl  height_to_ao.glsl  height_to_curvature.glsl  height_to_normal.glsl
test/assets/procedural/shaders/distance/: seed.glsl  step.glsl  texture.glsl
test/assets/procedural/shaders/flood_fill/: apply_links.glsl  extents.glsl  find_links.glsl  gen_texture.glsl  label.glsl  map.glsl  random_grayscale.glsl
test/assets/procedural/shaders/generators/: brick.glsl  shape.glsl  tile.glsl  uniform_grayscale.glsl  uniform_rgba.glsl
test/assets/procedural/shaders/kernel_filter/: kernel_filter.glsl
test/assets/procedural/shaders/modifiers/: blend_grayscale.glsl  blend_normal.glsl  blend_rgba.glsl  directional_warp.glsl  directional_warp_non_uniform.glsl  gradientmap.glsl  levles_grayscale.glsl  levles_rgba.glsl  quad_transform.glsl
test/assets/procedural/shaders/noise/: gradient.glsl  voronoi.glsl  worley.glsl
test/assets/shaders/: brdf.glsl  color.glsl  compute.glsl  cubemap_convolution.glsl  equirectangular_to_cubemap.glsl  pbr.glsl  pre_filter_map.glsl  skybox.glsl  texture.glsl
test/assets/textures/: parking_lot_2_1k.hdr  space_1k.hdr  space_64.hdr
test/source/: ComputeLayer.hpp  ShipController.hpp  main.cpp
